# y3-gam

./: .gitattributes  .gitignore  .gitmodules  BUILDLIB.bat  Build.lua  CMakeLists.txt  ImaGE.sln  LICENSE.txt  gitignore.txt  readme.md  y3-gam.sln
Assets/: legacy.metadata.igeproj  metadata.igeproj
Assets/.Editor/: unused_assets.txt
Assets/Animations/: BlockedDoorOpen.10610841280844265032.igemeta  ControlPanelOpen.7495258558632010554.igemeta  DoorClose.16053413657916671263.igemeta  FragmentFloat.7795434828334433536.igemeta  FragmentFloatLevel2.6438842615981307375.igemeta  FragmentFloatLevel3.16072198497127702958.igemeta  FragmentFlyIn.13136212335453471688.igemeta  FragmentFlyInLevel2.1635934045224034562.igemeta  FragmentFlyInLevel3.92258660463393966.igemeta  (+45 more)
Build-Scripts/: Build-Mono.bat  CMake-Setup.bat  Setup-Submodules.bat  Setup-Windows.bat  output.txt
Engine/: Engine.vcxproj  Engine.vcxproj.filters  imgui.ini
ImaGE/: ImaGE.filters  ImaGE.sln  ImaGE.vcxproj  Material.h  MaterialAsset.cpp  bsptree.json  imgui.ini
ImaGE-Core/: Build-ImaGE-Core.lua  ImaGE-Core.vcxproj  ImaGE-Core.vcxproj.filters  Light.cpp  imgui.ini
ImaGE-Editor/: Build-ImaGE-Editor.lua  ImaGE-Editor.vcxproj  ImaGE-Editor.vcxproj.filters  imgui.ini
ImaGE-Game/: Build-ImaGE-Game.lua  ImaGE-Game.vcxproj
ImaGE-Script/: Build-ImaGE-Script.lua  Form1.Designer.cs  ImaGE-Script.csproj  ImaGE-Script.sln  ImaGE-script.csproj  PlayerMove.cs  PlayerMovement.cs  Program.cs  reb.bat
ImaGE-script/: Form1.cs  ImaGE-script.csproj
Installer/: InstallScript.iss
Scripts/: Setup-Windows.bat
(+4280 files in other folders)
